Fixed share overflow text

--- a/worker/style.css
+++ b/worker/style.css
@@ -221,7 +221,6 @@ h2 {
     flex-direction: column;
     color: rgba(255, 255, 255, 0.5);
     transition: all 0.3s;
-    word-break: break-all;
     padding: 0% 1% 0% 1%;
 }
 
